vendor/ocaml/testsuite/tests/backtrace/pr6920_why_at.byte.reference
Fatal error: exception Pervasives.Exit
Raised at file "pr6920_why_at.ml", line 1, characters 41-45
Called from file "pr6920_why_at.ml", line 3, characters 2-11
Called from file "pr6920_why_at.ml", line 9, characters 2-6
